image stretching fix

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -55,6 +55,7 @@ footer {
 	}
 
 	img {
+		width: auto;
 		padding: 0;
 		max-width: $colWidth - 4rem;
 		max-height: $colWidth;
